<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_150sdp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/purple"
    app:cardCornerRadius="@dimen/_5sdp"
    app:cardElevation="@dimen/_10sdp"
    app:contentPadding="@dimen/_10sdp"
    android:padding="@dimen/_10sdp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/please_choose_option"
            android:gravity="center"
            android:textColor="@color/whiteColor"
            android:textSize="@dimen/_13sdp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/i_am_having_all_info"
            android:textColor="@color/whiteColor"
            android:textAllCaps="false"
            android:gravity="center"
            android:background="@drawable/skyblue_solid_popup_item_backround"
            android:textSize="@dimen/_17sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/only_email_name"
            android:textColor="@color/whiteColor"
            android:textAllCaps="false"
            android:gravity="center"
            android:textSize="@dimen/_17sdp"
            android:background="@drawable/skyblue_solid_popup_item_backround"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"/>

    </LinearLayout>



</android.support.v7.widget.CardView>