<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_image_new">

    <RelativeLayout
        android:id="@+id/rl_header"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/statusBarColor"
        android:gravity="center_vertical">

        <Button
            android:id="@+id/btn_skip"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@android:color/transparent"
            android:text="SKIP"
            android:visibility="gone"
            android:textAllCaps="false"
            android:textColor="@color/whiteColor"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:paddingBottom="@dimen/_10sdp"
            android:text="Instructions"
            android:fontFamily="@font/roboto_bold"
            android:textColor="@color/whiteColor"
            android:textSize="@dimen/_14sdp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_header">


        <ScrollView
            android:id="@+id/sv_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/_30sdp"
                    android:gravity="center_horizontal"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/step_on_the_scale"
                    android:textColor="@color/whiteColor"
                    android:textSize="@dimen/_18sdp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/instruction_step1"
                        android:textColor="@color/whiteColor"
                        android:fontFamily="@font/roboto_regular"
                        android:textSize="@dimen/_15sdp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_7sdp"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@string/instruction_step2"
                        android:textColor="@color/whiteColor"
                        android:textSize="@dimen/_15sdp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_7sdp"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@string/instruction_step3"
                        android:textColor="@color/whiteColor"
                        android:textSize="@dimen/_15sdp" />

                    <Button
                        android:id="@+id/btndone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_30sdp"
                        android:layout_marginBottom="@dimen/_40sdp"
                        android:background="@drawable/login_button_gradient"
                        android:paddingTop="@dimen/_10sdp"
                        android:paddingBottom="@dimen/_10sdp"
                        android:fontFamily="@font/roboto_bold"
                        android:text="@string/yes_it_down"
                        android:textAllCaps="false"
                        android:textColor="@color/whiteColor"
                        android:textSize="@dimen/_14sdp" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

</RelativeLayout>